# industrial-digital-twin

./: .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  architecture.md  dev-log-2026-07-17.md  dev-log-2026-07-20.md  dev-log-2026-07-21.md  dev-log-2026-07-22.md
hub-go/: Dockerfile  go.mod  main.go
hub-go/internal/config/: config.go
hub-go/internal/engine/: engine.go  engine_test.go
hub-go/internal/hub/: hub.go  hub_test.go
intelligence-python/: Dockerfile  pyproject.toml
intelligence-python/idt_intelligence/: __init__.py  agent.py  cli.py  detector.py  gnn.py  models.py  server.py  synth.py
intelligence-python/tests/: test_intelligence.py
interface-ts/: package.json
interface-ts/app/: globals.css  layout.tsx  page.tsx
interface-ts/lib/: types.ts
proto/: protocol.md
scripts/: verify.py
topology-rust/: Cargo.toml  Dockerfile
topology-rust/src/: cloud.rs  lib.rs  main.rs
