[package]
name = "idt-topology"
version = "0.1.0"
edition = "2021"
description = "industrial-digital-twin topology processor: point-cloud cleaning + geometric features"
license = "MIT"

[lib]
name = "idt_topology"
path = "src/lib.rs"

[[bin]]
name = "idt-topology"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
